[package]
name = "client"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
csv = "1.3.1"
rand = "0.9.2"
tokio = { workspace = true, features = [
    "net",
    "sync",
    "time",
    "macros",
    "rt",
    "rt-multi-thread",
] }


[[bin]]
name = "client"
path = "src/main.rs"
