[package]
name = "userspace-server"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
rand = "0.9.2"
tokio = { workspace = true, features = [
    "net",
    "sync",
    "time",
    "macros",
    "rt",
    "rt-multi-thread",
] }


[[bin]]
name = "userspace-server"
path = "src/main.rs"