[package]
name = "xdp-echo-server-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
xdp-echo-server-common = { path = "../xdp-echo-server-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "xdp-echo-server"
path = "src/main.rs"
